--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laborci/eternity",
-    "description": "Eternity",
+    "description": "Eternity Framework",
     "keywords": [],
     "license" : "MIT",
     "authors" : [
